--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
 
       <section id="miko_images">
         <h2 class="text-center">ミコの画像集</h2>
-           <a href="#"><i aria-label="癒しの世界へ…" class="iyashi">
-             <span class="button-readmore">癒しの世界へ…</span>
-             </i></a>
+           <a href=" ">癒しの世界へ…</a>
       </section>
-    </main><!--footer-->
+    <!--footer-->
     <footer><small class="text-center abel uppercase">&copy; Megumi Saito, All Rights Reserved.</small></footer>
-  </body>
+    </body>
 </html>
